--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,15 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'gs-serving-web-content'
+    baseName = 'notifications-java-user-research-app'
     version =  '0.1.0'
 }
 
 repositories {
     mavenCentral()
+    maven {
+        url  "http://dl.bintray.com/gov-uk-notify/maven"
+    }
 }
 
 sourceCompatibility = 1.8
@@ -27,6 +30,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-freemarker")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile('uk.gov.service.notify:notifications-java-client:2.1.3-RELEASE')
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
